chore: enforce clean .gitignore and stage all source changes