@@ -1,5 +1,6 @@
 package com.ecommerce.inventory.service.impl;
 
+import com.ecommerce.inventory.dto.LowStockItemDTO;
 import com.ecommerce.inventory.entity.InventoryItem;
 import com.ecommerce.inventory.repository.InventoryItemRepository;
 import com.ecommerce.inventory.service.ReportingService;
@@ -9,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -20,54 +20,42 @@ public class ReportingServiceImpl implements ReportingService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<Object> getLowStockItems() {
+    public List<LowStockItemDTO> getLowStockItems() {
         log.debug("Fetching low stock items");
-        
-        List<InventoryItem> lowStockItems = inventoryItemRepository.findByAvailableStockLessThanEqual(10L);
-        
-        return lowStockItems.stream()
-            .map(this::mapToLowStockResponse)
-            .collect(Collectors.toList());
+        return inventoryItemRepository.findByAvailableStockLessThanEqual(10L)
+            .stream().map(this::toDTO).toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<Object> getLowStockItemsByWarehouse(String warehouseId) {
+    public List<LowStockItemDTO> getLowStockItemsByWarehouse(String warehouseId) {
         log.debug("Fetching low stock items for warehouse: {}", warehouseId);
-        
-        List<InventoryItem> allItems = inventoryItemRepository.findByAvailableStockLessThanEqual(10L);
-        
-        return allItems.stream()
-            .filter(item -> item.getWarehouseId().equals(warehouseId))
-            .map(this::mapToLowStockResponse)
-            .collect(Collectors.toList());
+        return inventoryItemRepository
+            .findByAvailableStockLessThanEqualAndWarehouseId(10L, warehouseId)
+            .stream().map(this::toDTO).toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public void checkAndAlertLowStock() {
-        log.info("Checking for low stock items");
-        
         List<InventoryItem> lowStockItems = inventoryItemRepository.findByAvailableStockLessThanEqual(10L);
-        
         if (!lowStockItems.isEmpty()) {
             log.warn("Found {} items with low stock", lowStockItems.size());
-            
-            lowStockItems.forEach(item -> 
-                log.warn("Low stock alert - Item: {} Available: {} Reorder Level: {}", 
+            lowStockItems.forEach(item ->
+                log.warn("Low stock alert - Item: {} Available: {} Reorder Level: {}",
                     item.getProductVariantId(), item.getAvailableStock(), item.getReorderLevel())
             );
         }
     }
 
-    private Object mapToLowStockResponse(InventoryItem item) {
-        return new Object() {
-            public final String id = item.getId();
-            public final String productVariantId = item.getProductVariantId();
-            public final String warehouseId = item.getWarehouseId();
-            public final Long availableStock = item.getAvailableStock();
-            public final Long reorderLevel = item.getReorderLevel();
-            public final Long reservedStock = item.getReservedStock();
-        };
+    private LowStockItemDTO toDTO(InventoryItem item) {
+        return LowStockItemDTO.builder()
+            .id(item.getId())
+            .productVariantId(item.getProductVariantId())
+            .warehouseId(item.getWarehouseId())
+            .availableStock(item.getAvailableStock())
+            .reorderLevel(item.getReorderLevel())
+            .reservedStock(item.getReservedStock())
+            .build();
     }
 }
